force-app/main/default/objects/Opportunity_MonthlyAmount__c/Opportunity_MonthlyAmount__c.object-meta.xml
<CustomObject>
    <label>Opportunity Monthly Amount</label>
    <nameField>
        <label>Opportunity Monthly Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Monthly Amount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>