force-app/main/default/objects/Opportunity_MonthlyAmount__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>