force-app/main/default/objects/Opportunity_MonthlyAmount__c/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <formula>&quot;SDS-&quot; +  Opportunity_Id__r.Auto_OpptyCode__c  + &quot;0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Code</label>
    <type>Text</type>
</CustomField>