force-app/main/default/objects/Opportunity_MonthlyAmount__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunity_Monthly_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>