force-app/main/default/objects/Opportunity_MonthlyAmount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Code__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Period__c</columns>
    <columns>Month__c</columns>
    <columns>Monthly_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>